--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,10 @@
 #
 default: &default
   adapter: postgresql
-  encoding: unicode
+  encoding: sql_ascii
+  username: postgres
+  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] %>
+  port: <%= ENV['POSTGRES_PORT_5432_TCP_PORT'] %>
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
